crates/ddlog-syntax/tests/validation/fail/extern_relation.dl
// kind:item validate:true pass:false ignore:false
input extern relation Foo()
input extern extern relation Foo()
input extern multiset Foo()
input extern extern multiset Foo()
input extern stream Foo()
input extern extern stream Foo()
